# ideath

./: .babelrc  .eslintrc.json  .gitignore  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  VERSIONING.md  build.sh  cypress.config.js  cypress.config.ts  cypress.json  jest.config.js  next.config.js  package.json  tsconfig.json
.circleci/: config.yml
.claude/: settings.json
.claude/hooks/: tdd-guard.sh
.claude/skills/: audit.md  bench.md  new-primitive.md
.github/workflows/: ci.yml
.github/workflows/package-consumer/: CMakeLists.txt  main.cpp
.husky/: pre-commit  pre-push
.storybook/: main.js  preview.js
__tests__/utils/: index.test.jsx
benchmarks/: BASELINE.md  bench_primitives.cpp
cmake/: ideathConfig.cmake.in
components/: Music.tsx  Neon.module.scss  Neon.tsx  Pads.module.scss  Pads.tsx
components/atoms/: CircleButton.css.ts  CircleButton.module.scss  CircleButton.stories.tsx  CircleButton.tsx  FloatingButton.css.ts  FloatingButton.tsx  IconButton.css.ts  IconButton.tsx  Icons.tsx  Knob.css.ts  Knob.tsx  Label.css.ts  Label.tsx  MotionImage.tsx  MotionText.tsx  Pad.css.ts  Pad.module.scss  Pad.tsx  PlayButton.css.ts  PlayButton.module.scss  PlayButton.stories.tsx  PlayButton.tsx  RangeSlider.css.ts  RangeSlider.tsx  SquareButton.css.ts  SquareButton.module.scss  SquareButton.tsx  StepPad.css.ts  StepPad.tsx  Toggle.tsx  (+1 more)
constants/: fm.ts  org.ts  pads.ts  seq.ts  tonnetz.ts
contexts/: state.tsx
examples/minimal/: CMakeLists.txt  main.cpp
hooks/: useDrug.tsx  useKeyPress.tsx  useMQ.tsx  useOverlay.tsx  usePanel.tsx
pages/: _app.tsx  _document.tsx  fm.tsx  index.css.ts  index.tsx  netz.tsx  org.tsx  rec.tsx  seq.css.ts  seq.tsx  tb.tsx  tonnetz.tsx
public/: sample.html
reducers/: master.ts
src/: BandlimitedNoise.cpp  Biquad.cpp  BitCrusher.cpp  BowedString.cpp  CombFilter.cpp  Compressor.cpp  DXFMSynth.cpp  DelayLine.cpp  Envelope.cpp  FMSynth.cpp  FeedbackBuffer.cpp  FormantFilter.cpp  FunctionGenerator.cpp  GranularProcessor.cpp  HallReverb.cpp  HarmonicOscillator.cpp  HarmonicWavetable.cpp  KarplusStrong.cpp  LFO.cpp  LowPassGate.cpp  LowPassGateVoice.cpp  ModalResonator.cpp  MultiShapeWavetable.cpp  Noise.cpp  Oscillator.cpp  PeakLimiter.cpp  Polyphony.cpp  Portamento.cpp  README.md  Reverb.cpp  SVFilter.cpp  Saturation.cpp  ShimmerReverb.cpp  TapeDelay.cpp  UnisonOscillator.cpp  Voice.cpp  Wavefolder.cpp  Wavetable.cpp  lib.rs  sequencer.rs  (+1 more)
storybook-static/: main.b9926451f2609a52a8aa.manager.bundle.js  vendors~main.7c47903ea43e951c3707.manager.bundle.js
styles/: Pads.module.scss  Seq.module.scss  fm.css.ts  globals.css.ts  globals.scss  index.css.ts  org.css.ts  rec.css.ts  seq.css.ts  tb.css.ts  variables.scss
tests/: AUDIT.md  main.cpp  test_AudioSafety.cpp  test_BandlimitedNoise.cpp  test_Biquad.cpp  test_BitCrusher.cpp  test_BowedString.cpp  test_CombFilter.cpp  test_Compressor.cpp  test_DXFMSynth.cpp  test_DelayLine.cpp  test_Envelope.cpp  test_FMSynth.cpp  test_FeedbackBuffer.cpp  test_FormantFilter.cpp  test_FunctionGenerator.cpp  test_GranularProcessor.cpp  test_HallReverb.cpp  test_HarmonicOscillator.cpp  test_HarmonicWavetable.cpp  test_KarplusStrong.cpp  test_LFO.cpp  test_LowPassGate.cpp  test_ModalResonator.cpp  test_MultiShapeWavetable.cpp  test_Noise.cpp  test_Oscillator.cpp  test_PeakLimiter.cpp  test_Polyphony.cpp  test_Portamento.cpp  test_Reverb.cpp  test_SVFilter.cpp  test_Saturation.cpp  test_SeqClick.cpp  test_ShimmerReverb.cpp  test_TapeDelay.cpp  test_UnisonOscillator.cpp  test_Voice.cpp  test_Wavefolder.cpp  test_Wavetable.cpp
tools/repl/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  COMMANDS.md  CommandParser.cpp  CommandParser.h  NoteUtils.cpp  NoteUtils.h  Presets.cpp  Presets.h  ScopeBuffer.h  SharedState.h  SpectrumRenderer.h  TcpServer.cpp  TcpServer.h  TrackManager.cpp  TrackManager.h  WsServer.cpp  WsServer.h  main.cpp
types/: index.d.ts
utils/: audio.ts  clap.ts  engines.d.ts  hihat.ts  index.ts  kick.ts  mic.ts  recorder.js  snare.ts  sound.ts
wasm/: wasm_audioworklet_synth.wasm
(+66 files in other folders)
